# FormacaoAluraOpenAIePython

./: README.md  contador_tokens.py
curso1/: analisador_sentimentos.py  analisador_transacoes.py  categorizador.py  main.py  selecao_modelo.py  transacao-9c-Artigo Esportivo-Possível Fraude.txt
curso1/dados/: analise-Camisetas de algodão orgânico.txt  analise-Jeans feitos com materiais reciclados.txt  analise-Maquiagem mineral.txt
curso2/: app.py  assistente_ecomart.py  assistentes.json  helpers.py  main.py  pyproject.toml  selecionar_documentos.py  selecionar_persona.py  tools_ecomart.py  vision_ecomart.py
curso2/static/js/: index.js
curso3/: .gitignore  assistente_projetoo.py  criador_usuarios_de_teste.py  gerador_casos_uso.py  gerador_cenario_teste.py  gerador_scrip_teste.py  main.py  pyproject.toml  script_temp_ia.py  tools.py
curso3/documentos/: acode_lab.txt  exemplos_caso_uso.txt  explicacao_casos.txt
curso4/: assistente_base.py  assistente_commit.py  assistente_documentacao.py  assistente_revisao.py  assistente_teste_unitario.py  interface_chat.py  main.py  requirements.txt  util_hash.py  util_io.py
curso4/commits/: data_analytics.json
curso4/respostas/: Codigo-data_analytics.py  Commit-data_analytics.txt  Documentacao-data_analytics.txt  Revisao-data_analytics.txt  commit-data_analytics.txt
curso5/: README.md  ai_map.py  ai_tools_logic.py  alocador.py  assistente.py  helper_models.py  ia_chat.py  padrao-memoria.csv  padrao.csv  requirements.txt  teste_alocacao_tarefas.py
